--- a/ue04MyWebsite/src/app/trees.component.html
+++ b/ue04MyWebsite/src/app/trees.component.html
@@ -1,4 +1,6 @@
-<h1>Bäume</h1>
-<p>
-    <app-clock></app-clock>
-</p>
+<div style="margin-top: 4em">
+    <h1>Bäume</h1>
+    <p>
+        <app-clock></app-clock>
+    </p>
+</div> 
